Level updates: - Add character names to all levels - Drop down menu now populates with correct character names - Remove horizontal scrollbar from level page

--- a/wheres-waldo-photo-tagging-app/src/components/Level.css
+++ b/wheres-waldo-photo-tagging-app/src/components/Level.css
@@ -1,5 +1,7 @@
 :root {
   --closest-foreground-z-index: 2;
+
+  overflow-x: hidden;
 }
 
 .Level {
